--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 
+  <p>Data received from Child Comp is: {{dataReceivedFromChildComp}}</p>
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a class="nav-item nav-link active" data-toggle="tab" href="#basic-databinding" role="tab"
@@ -18,17 +19,49 @@
       aria-labelledby="basic-databinding-tab">
       <h2>Basic Data Binding</h2>
       <h3>String Interpolation</h3>
+      <p>App name is : {{appName}}</p>
+      <p>Average Team Exp: {{developersAvgExp}} years</p>
+      <p title="{{appName}}">Mouseover to see the app name</p>
+      <input type="text" value="{{appName}}">
+      
+      <hr>
+      <h3>Property Binding</h3>
+      <p [title]="companyName">Mouseover to see the text -- uses property binding</p>
+      <input type="text" [value]="companyName">
+      <!-- class binding -->
+      <div [ngClass]="{ 'greenText': isLoggedIn, 'redText': !isLoggedIn }">Testing css class</div>
 
+      <!-- todo: learn about ngStyle -- style binding -->
+
+      <hr>
+      <h3>Event Binding</h3>
+      <button type="button" onclick="clickMeHandler()">Click me -- will not work -- check console</button>
+      <br>
+      <button type="button" (click)="clickMeHandler($event)">Click me</button>
+
+      <hr>
+      <h3>Two way Binding</h3>
+      <p>{{courseName}}</p>
+      <input type="text" [value]="courseName">
+      <br>
+      <input type="text" [(ngModel)]="courseName">
     </div>
 
     <div class="tab-pane fade" id="cpb-tab" role="tabpanel" aria-labelledby="cpb-tab-tab">
       <h2>Custom Property Binding -- Parent to Child Comp Communication</h2>
+      <app-cpb></app-cpb>
+      <!-- Step 2 in CPB: pass data thru the custom property -->
+      <!-- parent comp is now sending 30 to child component -->
+      <app-cpb [age]="30"></app-cpb>
+      <app-cpb [age]="40"></app-cpb>
+      <app-cpb [age]="50"></app-cpb>
       
     </div>
 
     <div class="tab-pane fade" id="ceb-tab" role="tabpanel" aria-labelledby="ceb-tab-tab">
       <h2>Child to Parent Comp Communication</h2>
-
+      <!-- Step 3 in CEB: Work with custom event handler to receive data from child comp -->
+      <app-ceb (profileLoaded)="profileLoadedHandler($event)"></app-ceb>
     </div>
 
     <div class="tab-pane fade" id="directives-tab" role="tabpanel" aria-labelledby="directives-tab">
