--- a/src/app/concepts/components/concepts.component.html
+++ b/src/app/concepts/components/concepts.component.html
@@ -101,8 +101,11 @@
 
 
       <h3>Custom Attribute Directive</h3>
-      <div>
-        
+      <div appColorizer>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <div class="text-center">
+          <button type="button" class="btn btn-primary">Click to Change Color</button>
+        </div>
       </div>
 
 
