--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -6,6 +6,9 @@
     <a class="nav-link" routerLink="/concepts">Concepts</a>
   </li>
   <li class="nav-item" routerLinkActive="active">
+    <a class="nav-link" routerLink="/users">User Management</a>
+  </li>
+  <li class="nav-item" routerLinkActive="active">
     <a class="nav-link" routerLink="/about">About</a>
   </li>
   <!-- content projection-->
