--- a/src/app/users/components/add-user/add-user.component.html
+++ b/src/app/users/components/add-user/add-user.component.html
@@ -6,13 +6,14 @@
 
     </div>
     <!-- step3 patch up html form with the ts using [formGroup]-->
-    <form class="col-md-6 offset-md-3">
+    <form class="col-md-6 offset-md-3" [formGroup]="userForm">
       <div class="form-group row">
         <label for="staticName" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
            <!-- Step4: connect the formControl in form fields-->
           <input type="text" class="form-control" 
-          placeholder="Enter Name" />
+          placeholder="Enter Name" formControlName="name"
+          [ngClass]="{ 'is-invalid': userForm.get('name').touched && userForm.get('name').invalid }" />
           <!-- refer TS for step 5 -->
           <div class="invalid-feedback">
             <div>Name is required</div>
@@ -22,7 +23,9 @@
       <div class="form-group row">
         <label for="staticPhone" class="col-sm-2 col-form-label">Phone</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" placeholder="Enter Phone" />
+          <input type="text" class="form-control" placeholder="Enter Phone" 
+          formControlName="phone" 
+          [ngClass]="{ 'is-invalid': userForm.get('phone').touched && userForm.get('phone').invalid }" />
           <div class="invalid-feedback">
             <div>Phone is required</div>
           </div>
@@ -31,10 +34,12 @@
       <div class="form-group row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" placeholder="Enter Email" />
+          <input type="email" class="form-control" 
+          placeholder="Enter Email" formControlName="email"
+          [ngClass]="{ 'is-invalid': userForm.get('email').touched && userForm.get('email').invalid }" />
           <div class="invalid-feedback">
-            <div>Email is required</div>
-            <div>Email seems to be not valid</div>
+            <div *ngIf="userForm.get('email').errors?.required">Email is required</div>
+            <div *ngIf="userForm.get('email').errors?.email">Email seems to be not valid</div>
           </div>
         </div>
       </div>
