--- a/src/app/users/components/users.component.html
+++ b/src/app/users/components/users.component.html
@@ -9,10 +9,11 @@
   </div>
 
   <div class="row">
-    <div class="card col-sm-3">
+    
+    <div class="card col-sm-3" *ngFor="let user of userList">
       <div class="card-body">
-        <h5 class="card-title">Steve</h5>
-        <p class="card-text">435324523</p>
+        <h5 class="card-title">{{ user.name }}</h5>
+        <p class="card-text">{{user.phone }}</p>
         <a routerLink="/users/1" class="link">View Details</a>
       </div>
     </div>
