--- a/src/app/users/components/users.component.html
+++ b/src/app/users/components/users.component.html
@@ -14,7 +14,7 @@
       <div class="card-body">
         <h5 class="card-title">{{ user.name }}</h5>
         <p class="card-text">{{user.phone }}</p>
-        <a routerLink="/users/1" class="link">View Details</a>
+        <a routerLink="/users/{{user.id}}" class="link">View Details</a>
       </div>
     </div>
     
