--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -9,7 +9,8 @@
           card's content.</p>
         <p>Phone: {{ userData.phone }}</p>
         <p>Email: {{ userData.email }}</p>
-        <button type="button" class="btn btn-primary" data-toggle='modal' data-target='#editUserModal'>Edit</button>
+        <button type="button" class="btn btn-primary" data-toggle='modal' 
+        data-target='#editUserModal' (click)="editModalOpenHandler()">Edit</button>
         <button type="button" class="btn btn-danger">Delete</button>
 
         <!-- Modal -->
@@ -23,28 +24,31 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
-                <form>
+              <div class="modal-body" *ngIf="duplicateUserData">
+                <form ngNativeValidate (ngSubmit)="updateBtnHandler()">
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" name="personName" placeholder="Enter name" required>
+                      <input type="text" class="form-control" name="personName" 
+                      placeholder="Enter name" [(ngModel)]="duplicateUserData.name" required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" name="phone" placeholder="Enter Phone" required>
+                      <input type="text" class="form-control" name="phone" 
+                      placeholder="Enter Phone" [(ngModel)]="duplicateUserData.phone" required>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" name="email" placeholder="Enter Email" required>
+                      <input type="email" class="form-control" name="email" 
+                      placeholder="Enter Email" [(ngModel)]="duplicateUserData.email" required>
                     </div>
                   </div>
 
-                  <div class="alert alert-success">
+                  <div class="alert alert-success" *ngIf="isUpdated">
                     Updated successfully!
                   </div>
 
