--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,6 +14,8 @@
           <a class="nav-link" href="#">Signup</a>
         </li>
       </app-menu>
+      <button type="button" class="btn btn-primary" 
+      style="margin-left: 20px" (click)="gotoCartHandler()">Cart ({{cartCount}})</button>
     </div>
   </nav>
 </header>
