--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -9,6 +9,9 @@
     <a class="nav-link" routerLink="/users">User Management</a>
   </li>
   <li class="nav-item" routerLinkActive="active">
+    <a class="nav-link" routerLink="/products">Products</a>
+  </li>
+  <li class="nav-item" routerLinkActive="active">
     <a class="nav-link" routerLink="/about">About</a>
   </li>
   <!-- content projection-->
