--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,11 +7,11 @@
   
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <app-menu>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="auth/login">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Signup</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="auth/signup">Signup</a>
         </li>
       </app-menu>
       <button type="button" class="btn btn-primary" 
