--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="container">
-  <form class="form-signin col-md-6 offset-md-3">
+  <form class="form-signin col-md-6 offset-md-3" ngNativeValidate #loginForm="ngForm" (ngSubmit)="loginHandler(loginForm)">
     <div class="text-center mb-4">
       <p>Sign In here</p>
     </div>
 
     <div class="form-label-group">
       <label for="inputEmail">Email address</label>
-      <input type="email" name="email" class="form-control" placeholder="Email address" required>
+      <input type="email" name="email" ngModel class="form-control" placeholder="Email address" required>
     </div>
 
     <div class="form-label-group">
       <label for="inputPassword">Password</label>
-      <input type="password" name="password" class="form-control" placeholder="Password" required>
+      <input type="password" name="password" ngModel class="form-control" placeholder="Password" required>
     </div>
 
     <div>
