--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,6 +13,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="auth/signup">Signup</a>
         </li>
+        <li class="nav-item" >
+          <a class="nav-link" (click)="logoutHandler()">Logout</a>
+        </li>
       </app-menu>
       <button type="button" class="btn btn-primary" 
       style="margin-left: 20px" (click)="gotoCartHandler()">Cart ({{cartCount}})</button>
